[gd_scene load_steps=139 format=2]

[ext_resource path="res://resources/archer_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/character_controller.gd" type="Script" id=2]
[ext_resource path="res://gfx/tags.png" type="Texture" id=4]
[ext_resource path="res://sfx/UI/char_select1.wav" type="AudioStream" id=5]
[ext_resource path="res://gfx/menu_select.png" type="Texture" id=6]
[ext_resource path="res://gfx/speak.png" type="Texture" id=7]
[ext_resource path="res://resources/swordsman_spriteframes.tres" type="SpriteFrames" id=8]
[ext_resource path="res://sfx/gameplay/arrow_hit1.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/gameplay/walking1.wav" type="AudioStream" id=11]
[ext_resource path="res://gfx/Sprites/shadow.png" type="Texture" id=12]
[ext_resource path="res://sfx/gameplay/magic_hit1.wav" type="AudioStream" id=13]
[ext_resource path="res://gfx/Sprites/monster.png" type="Texture" id=14]
[ext_resource path="res://resources/character_material.tres" type="Material" id=15]
[ext_resource path="res://gfx/Sprites/mage.png" type="Texture" id=16]
[ext_resource path="res://sfx/gameplay/sword_attack1.wav" type="AudioStream" id=17]
[ext_resource path="res://gfx/Sprites/archer.png" type="Texture" id=19]
[ext_resource path="res://sfx/gameplay/magic_shoot1.wav" type="AudioStream" id=20]
[ext_resource path="res://sfx/gameplay/arrow_shoot1.wav" type="AudioStream" id=25]
[ext_resource path="res://sfx/gameplay/enemy_defeat1.wav" type="AudioStream" id=27]
[ext_resource path="res://sfx/gameplay/defend1.wav" type="AudioStream" id=29]
[ext_resource path="res://sfx/gameplay/heal1.wav" type="AudioStream" id=31]
[ext_resource path="res://sfx/gameplay/recruit_success.wav" type="AudioStream" id=32]
[ext_resource path="res://sfx/gameplay/recruit_fail.wav" type="AudioStream" id=33]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
flags_fixed_size = true
vertex_color_is_srgb = true
params_specular_mode = 4
params_cull_mode = 2
params_depth_draw_mode = 2
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 19 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
flags_fixed_size = true
vertex_color_is_srgb = true
params_specular_mode = 4
params_cull_mode = 2
params_depth_draw_mode = 2
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 14 )

[sub_resource type="AtlasTexture" id=3]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
flags = 16
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "attack-left",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "attack-up",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 13 ), SubResource( 14 ), SubResource( 13 ), SubResource( 14 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "hit-right",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "idle-left",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "attack-right",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "attack-down",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 26 ), SubResource( 27 ), SubResource( 26 ), SubResource( 27 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "hit-up",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "idle-down",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "walk-up",
"speed": 10.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "walk-left",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 39 ), SubResource( 40 ), SubResource( 39 ), SubResource( 40 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "hit-left",
"speed": 10.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "walk-right",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 46 ), SubResource( 47 ), SubResource( 46 ), SubResource( 47 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "hit-down",
"speed": 10.0
}, {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "idle-right",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "idle-up",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "walk-down",
"speed": 10.0
} ]

[sub_resource type="SpatialMaterial" id=56]
flags_transparent = true
flags_unshaded = true
flags_fixed_size = true
vertex_color_is_srgb = true
params_specular_mode = 4
params_cull_mode = 2
params_depth_draw_mode = 2
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 16 )

[sub_resource type="AtlasTexture" id=57]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=58]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=59]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=60]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=61]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=62]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=63]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=64]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=65]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 300, 60, 60 )

[sub_resource type="AtlasTexture" id=66]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=67]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 240, 60, 60 )

[sub_resource type="AtlasTexture" id=68]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=69]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 420, 60, 60 )

[sub_resource type="AtlasTexture" id=70]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=71]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=72]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=73]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=74]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 240, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=75]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 300, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=76]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 360, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=77]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=78]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=79]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=80]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 240, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=81]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 300, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=82]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 360, 60, 60, 60 )

[sub_resource type="AtlasTexture" id=83]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=84]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=85]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=86]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=87]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=88]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 240, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=89]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 300, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=90]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 360, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=91]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=92]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 360, 60, 60 )

[sub_resource type="AtlasTexture" id=93]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 120, 60, 60 )

[sub_resource type="AtlasTexture" id=94]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 0, 180, 60, 60 )

[sub_resource type="AtlasTexture" id=95]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=96]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=97]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=98]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 240, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=99]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 300, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=100]
flags = 16
atlas = ExtResource( 16 )
region = Rect2( 360, 0, 60, 60 )

[sub_resource type="SpriteFrames" id=101]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 57 ), SubResource( 58 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "attack-left",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 59 ), SubResource( 60 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "attack-up",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 61 ), SubResource( 62 ), SubResource( 61 ), SubResource( 62 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "hit-right",
"speed": 8.0
}, {
"frames": [ SubResource( 63 ) ],
"loop": true,
"name": "idle-left",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 64 ), SubResource( 65 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "attack-right",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 66 ), SubResource( 67 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "attack-down",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "hit-up",
"speed": 8.0
}, {
"frames": [ SubResource( 70 ) ],
"loop": true,
"name": "idle-down",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "walk-up",
"speed": 8.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "walk-left",
"speed": 8.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 83 ), SubResource( 84 ), SubResource( 83 ), SubResource( 84 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "hit-left",
"speed": 8.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": true,
"name": "walk-right",
"speed": 8.0
}, {
"frames": [ SubResource( 91 ), SubResource( 92 ), SubResource( 91 ), SubResource( 92 ), SubResource( 91 ), SubResource( 92 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "hit-down",
"speed": 8.0
}, {
"frames": [ SubResource( 93 ) ],
"loop": true,
"name": "idle-right",
"speed": 5.0
}, {
"frames": [ SubResource( 94 ) ],
"loop": true,
"name": "idle-up",
"speed": 5.0
}, {
"frames": [ SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ) ],
"loop": true,
"name": "walk-down",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=104]
animations = [ {
"frames": [ SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 4 )
region = Rect2( 0, 20, 20, 20 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 4 )
region = Rect2( 20, 20, 20, 20 )

[sub_resource type="SpriteFrames" id=107]
animations = [ {
"frames": [ SubResource( 105 ), SubResource( 106 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=108]
flags = 2
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=109]
flags = 2
atlas = ExtResource( 6 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="SpriteFrames" id=110]
animations = [ {
"frames": [ SubResource( 108 ), SubResource( 109 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 9, 9 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 7 )
region = Rect2( 0, 9, 9, 9 )

[sub_resource type="SpriteFrames" id=113]
animations = [ {
"frames": [ SubResource( 111 ), SubResource( 112 ) ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[sub_resource type="Gradient" id=114]
colors = PoolColorArray( 0.917647, 1, 0.866667, 0, 0.917647, 1, 0.866667, 0 )

[sub_resource type="Gradient" id=115]
colors = PoolColorArray( 0.917647, 1, 0.866667, 1, 0.917647, 1, 0.866667, 1 )

[node name="character_controller" type="Spatial"]
script = ExtResource( 2 )

[node name="shadow" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.01, 0.5 )
opacity = 0.7
pixel_size = 0.02
axis = 1
billboard = 2
texture = ExtResource( 12 )

[node name="fighter" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.317352, 0.5 )
visible = false
material_override = ExtResource( 15 )
cast_shadow = 0
offset = Vector2( 0, 12 )
pixel_size = 0.00082
billboard = 1
alpha_cut = 2
frames = ExtResource( 8 )
animation = "idle-down"
playing = true

[node name="ai_fighter" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.317352, 0.5 )
visible = false
material_override = ExtResource( 15 )
cast_shadow = 0
offset = Vector2( 0, 12 )
pixel_size = 0.000781
billboard = 1
alpha_cut = 2
frames = ExtResource( 8 )
animation = "idle-down"
playing = true

[node name="archer" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.317352, 0.5 )
visible = false
material_override = SubResource( 1 )
cast_shadow = 0
offset = Vector2( 0, 12 )
pixel_size = 0.000781
billboard = 1
alpha_cut = 2
frames = ExtResource( 1 )
animation = "idle-down"
playing = true

[node name="ai_archer" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.317352, 0.5 )
visible = false
material_override = SubResource( 1 )
cast_shadow = 0
offset = Vector2( 0, 12 )
pixel_size = 0.00082
billboard = 1
alpha_cut = 2
frames = ExtResource( 1 )
animation = "idle-down"
playing = true

[node name="ai_boba" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.317352, 0.5 )
visible = false
material_override = SubResource( 2 )
offset = Vector2( 0, 12 )
pixel_size = 0.000781
billboard = 1
alpha_cut = 2
frames = SubResource( 55 )
animation = "idle-down"
playing = true

[node name="mage" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0.5 )
visible = false
material_override = SubResource( 56 )
offset = Vector2( 0, 12 )
pixel_size = 0.000781
billboard = 1
alpha_cut = 2
frames = SubResource( 101 )
animation = "idle-down"
playing = true

[node name="ai_mage" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0.5 )
visible = false
material_override = SubResource( 56 )
offset = Vector2( 0, 12 )
pixel_size = 0.00082
billboard = 1
alpha_cut = 2
frames = SubResource( 101 )
animation = "idle-down"
playing = true

[node name="guard" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0.5 )
visible = false
offset = Vector2( 8, 0 )
pixel_size = 0.04
billboard = 1
frames = SubResource( 104 )
playing = true

[node name="done" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0.5 )
visible = false
pixel_size = 0.04
billboard = 1
frames = SubResource( 107 )
frame = 1
playing = true

[node name="select" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0.5 )
visible = false
flip_v = true
pixel_size = 0.04
billboard = 1
frames = SubResource( 110 )
playing = true

[node name="speak" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0.5 )
visible = false
pixel_size = 0.04
billboard = 1
frames = SubResource( 113 )
playing = true

[node name="sfx" type="Node2D" parent="."]
visible = false

[node name="selected" type="Node" parent="sfx"]

[node name="char-select 1" type="AudioStreamPlayer" parent="sfx/selected"]
stream = ExtResource( 5 )
volume_db = -4.0

[node name="arrow_hit" type="Node" parent="sfx"]

[node name="hit 1" type="AudioStreamPlayer" parent="sfx/arrow_hit"]
stream = ExtResource( 9 )
volume_db = -2.5

[node name="walk" type="Node" parent="sfx"]

[node name="walk 1" type="AudioStreamPlayer" parent="sfx/walk"]
stream = ExtResource( 11 )
volume_db = 2.5

[node name="magic_hit" type="Node" parent="sfx"]

[node name="hit 1" type="AudioStreamPlayer" parent="sfx/magic_hit"]
stream = ExtResource( 13 )
volume_db = -2.0

[node name="sword_hit" type="Node" parent="sfx"]

[node name="hit_1" type="AudioStreamPlayer" parent="sfx/sword_hit"]
stream = ExtResource( 17 )
volume_db = -2.0

[node name="magic_attack" type="Node" parent="sfx"]

[node name="attack 1" type="AudioStreamPlayer" parent="sfx/magic_attack"]
stream = ExtResource( 20 )

[node name="arrow_attack" type="Node" parent="sfx"]

[node name="attack 1" type="AudioStreamPlayer" parent="sfx/arrow_attack"]
stream = ExtResource( 25 )
volume_db = -2.0

[node name="death" type="Node" parent="sfx"]

[node name="die 1" type="AudioStreamPlayer" parent="sfx/death"]
stream = ExtResource( 27 )
volume_db = -2.5

[node name="defend" type="Node" parent="sfx"]

[node name="guard 1" type="AudioStreamPlayer" parent="sfx/defend"]
stream = ExtResource( 29 )
volume_db = -2.0

[node name="heal" type="Node" parent="sfx"]

[node name="heal 1" type="AudioStreamPlayer" parent="sfx/heal"]
stream = ExtResource( 31 )
volume_db = -3.0

[node name="recruit" type="Node" parent="sfx"]

[node name="success" type="AudioStreamPlayer" parent="sfx/recruit"]
stream = ExtResource( 32 )
volume_db = -1.0

[node name="fail" type="AudioStreamPlayer" parent="sfx/recruit"]
stream = ExtResource( 33 )
volume_db = -1.5

[node name="vfx" type="Node2D" parent="."]

[node name="arrow_hit" type="CPUParticles2D" parent="vfx"]
position = Vector2( 8, 8 )
rotation = 1.62141
emitting = false
amount = 32
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity_random = 1.0
radial_accel = 32.0
radial_accel_random = 1.0
color_ramp = SubResource( 114 )

[node name="heal" type="CPUParticles2D" parent="vfx"]
position = Vector2( 8, 8 )
emitting = false
amount = 64
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 8, 8 )
direction = Vector2( 1, 1 )
gravity = Vector2( 0, -50 )
color_ramp = SubResource( 115 )

[node name="magic_hit" type="CPUParticles2D" parent="vfx"]
position = Vector2( 8, 8 )
emitting = false
amount = 32
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 8, 8 )
direction = Vector2( 1, 1 )
gravity = Vector2( 0, -50 )
color_ramp = SubResource( 115 )

[node name="ranged_weapon" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5 )
enabled = true
cast_to = Vector3( 0, 1, 0 )
